documentation/3.0.0/model.textphraseLike.md
---
layout: oldGuidelines
---
<article class="page type-page status-publish hentry">
   <div class="entry-content">
      <div class="panel-grid">
         <div class="panel-grid-cell" style="width: 65%; float: left;">
            <div class="panel widget widget_text panel-first-child panel-last-child">
               <div class="textwidget">
                  <div class="classSpec model">
                     <h3 id="model.textphraseLike">model.textphraseLike</h3>
                     <table class="wovenodd">
                        <tr>
                           <td colspan="2" class="wovenodd-col2">
                              <span class="label">model.textphraseLike</span> Phrase-level text elements.
                           </td>
                        </tr>
                        <tr>
                           <td class="wovenodd-col1">
                              <span class="label" lang="en">Module</span>
                           </td>
                           <td class="wovenodd-col2">MEI.shared</td>
                        </tr>
                        <tr>
                           <td class="wovenodd-col1">
                              <span class="label" lang="en">Available in</span>
                           </td>
                           <td class="wovenodd-col2">
                              <div class="parent">
                                 <div>
                                    <a class="link_odd_classSpec" href="/documentation/3.0.0/model.paracontentPart">model.paracontentPart</a>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/abbr">abbr</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/add">add</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/addName">addName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/addrLine">addrLine</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/annot">annot</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/bibl">bibl</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/bloc">bloc</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/caption">caption</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/contentItem">contentItem</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/corpName">corpName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/corr">corr</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/country">country</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/damage">damage</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/date">date</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/del">del</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/district">district</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/expan">expan</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/famName">famName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/foreName">foreName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/genName">genName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/geogFeat">geogFeat</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/geogName">geogName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/head">head</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/identifier">identifier</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/imprint">imprint</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/l">l</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/li">li</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/name">name</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/nameLink">nameLink</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/num">num</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/orig">orig</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/periodName">periodName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/persName">persName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/ref">ref</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/reg">reg</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/region">region</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/rend">rend</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/restore">restore</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/roleName">roleName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/settlement">settlement</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/sic">sic</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/street">street</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/styleName">styleName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/supplied">supplied</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/td">td</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/th">th</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/title">title</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/unclear">unclear</a>
                                 </div>
                              </div>
                           </td>
                        </tr>
                        <tr>
                           <td class="wovenodd-col1">
                              <span class="label" lang="en">Members</span>
                           </td>
                           <td class="wovenodd-col2">
                              <div class="parent">
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/pb">pb</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.pbLike">model.pbLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/accessRestrict">accessRestrict</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/actor">actor</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/anchoredText">anchoredText</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/arranger">arranger</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/audience">audience</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/author">author</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/biblScope">biblScope</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/byline">byline</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/captureMode">captureMode</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/carrierForm">carrierForm</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/composer">composer</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/condition">condition</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/context">context</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/cpMark">cpMark</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/depth">depth</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/desc">desc</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/dimensions">dimensions</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/dir">dir</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/distributor">distributor</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/dynam">dynam</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/edition">edition</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/editor">editor</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/exhibHist">exhibHist</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/extent">extent</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/f">f</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/figDesc">figDesc</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/fing">fing</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/funder">funder</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/genre">genre</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/gliss">gliss</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/hand">hand</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/harm">harm</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/height">height</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/inscription">inscription</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/label">label</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/language">language</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/librettist">librettist</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/line">line</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/lyricist">lyricist</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/octave">octave</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/ornam">ornam</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/otherChar">otherChar</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/perfDuration">perfDuration</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/pgFoot">pgFoot</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/pgFoot2">pgFoot2</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/pgHead">pgHead</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/pgHead2">pgHead2</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/physMedium">physMedium</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/plateNum">plateNum</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/playingSpeed">playingSpeed</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/price">price</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/provenance">provenance</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/publisher">publisher</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/pubPlace">pubPlace</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/recipient">recipient</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/repository">repository</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/role">role</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/roleDesc">roleDesc</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/soundChan">soundChan</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/specRepro">specRepro</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/sponsor">sponsor</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/stack">stack</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/syl">syl</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/symbol">symbol</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/sysReq">sysReq</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/tempo">tempo</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/term">term</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/textLang">textLang</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/trackConfig">trackConfig</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/treatHist">treatHist</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/treatSched">treatSched</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/useRestrict">useRestrict</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/watermark">watermark</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/width">width</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.textphraseLike.limited">model.textphraseLike.limited</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/address">address</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/eventList">eventList</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.addressLike">model.addressLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/address">address</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/postBox">postBox</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/postCode">postCode</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/street">street</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.addressPart">model.addressPart</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/bloc">bloc</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/country">country</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/district">district</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/geogFeat">geogFeat</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/region">region</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/settlement">settlement</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.geogNamePart">model.geogNamePart</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/annot">annot</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/ending">ending</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/layer">layer</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/lem">lem</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/measure">measure</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/notesStmt">notesStmt</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/part">part</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/perfMedium">perfMedium</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/pgDesc">pgDesc</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/rdg">rdg</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/score">score</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/section">section</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/staff">staff</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/syllable">syllable</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/symbolDef">symbolDef</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.annotLike">model.annotLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/bibl">bibl</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/biblList">biblList</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/relatedItem">relatedItem</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.biblLike">model.biblLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/change">change</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/date">date</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/eventList">eventList</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.dateLike">model.dateLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/abbr">abbr</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/expan">expan</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.editorialLike">model.editorialLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/fig">fig</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/titlePage">titlePage</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.figureLike">model.figureLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/expression">expression</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/identifier">identifier</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/item">item</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/physLoc">physLoc</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/series">series</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/seriesStmt">seriesStmt</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/source">source</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/work">work</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.identifierLike">model.identifierLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/altId">altId</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/classCode">classCode</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/lb">lb</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/reh">reh</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/verse">verse</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.lbLike">model.lbLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/application">application</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/pgDesc">pgDesc</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/ptr">ptr</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/ref">ref</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/series">series</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.locrefLike">model.locrefLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <span>
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.measurementLike">model.measurementLike</a> (no elements directly inheriting from this class)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/num">num</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.numLike">model.numLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/creation">creation</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/name">name</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/respStmt">respStmt</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.nameLike">model.nameLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/corpName">corpName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/eventList">eventList</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/persName">persName</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.nameLike.agent">model.nameLike.agent</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <span>
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.nameLike.place">model.nameLike.place</a> (no elements directly inheriting from this class)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/eventList">eventList</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/geogName">geogName</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.nameLike.geogName">model.nameLike.geogName</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/physLoc">physLoc</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/repository">repository</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.repositoryLike">model.repositoryLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/periodName">periodName</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/styleName">styleName</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.nameLike.label">model.nameLike.label</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/altId">altId</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/classCode">classCode</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/reh">reh</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/rend">rend</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/stack">stack</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.rendLike">model.rendLike</a>)
                                    </span>
                                 </div>
                                 <div>
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/series">series</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/seriesStmt">seriesStmt</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/title">title</a>, 
                                    <a class="link_odd_elementSpec" href="/documentation/3.0.0/titleStmt">titleStmt</a>
                                    <span> (via 
                                       <a class="link_odd_classSpec" href="/documentation/3.0.0/model.titleLike">model.titleLike</a>)
                                    </span>
                                 </div>
                              </div>
                           </td>
                        </tr>
                        <tr>
                           <td class="wovenodd-col1">
                              <span class="label" lang="en">Declaration</span>
                           </td>
                           <td class="wovenodd-col2">
                              <div xml:space="preserve" class="pre">
                                 <div class="indent1">
                                    <span data-indentation="1" class="element">&lt;classes&gt;</span>
                                    
                                    <div class="indent2">
                                       <span data-indentation="2" class="element">&lt;memberOf 
                                          <span class="attribute">key=</span>
                                          <span class="attributevalue">"
                                             <a class="link_odd" href="/documentation/3.0.0/model.paracontentPart">model.paracontentPart</a>"
                                          </span>/&gt;
                                       </span>
                                    </div>
                                    
                                    <span data-indentation="1" class="element">&lt;/classes&gt;</span>
                                 </div>
                              </div>
                           </td>
                        </tr>
                     </table>
                  </div>
               </div>
            </div>
         </div>
         <div class="panel-grid-cell" style="width: 35%; float: left;">
            <div class="panel widget widget_text panel-first-child panel-last-child">
               <header class="entry-header">
                  <h1 class="entry-title">
                     MEI Guidelines 
                     <small>Version 3.0.0</small>
                  </h1>
               </header>
               <div class="textwidget">
                  <ul class="guidelinesList">
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/3.0.0/chapters">MEI Guidelines</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/3.0.0/elements">Elements</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/3.0.0/atts">Attributes</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/3.0.0/models">Model Classes</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/3.0.0/data">Data Types</a>
                     </li>
                  </ul>
               </div>
               <div style="margin: 10px 30px; border-bottom: 0.5px solid #666666; height: 1px;"></div>
               <h3 class="widget-title">Model Classes</h3>
               <div class="textwidget">
                  <ul class="guidelinesList">
                     <li>
                        <a class="link_odd_classSpec a" href="/documentation/3.0.0/model.addressLike">model.addressLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec a" href="/documentation/3.0.0/model.addressPart">model.addressPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec a" href="/documentation/3.0.0/model.annotLike">model.annotLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec a" href="/documentation/3.0.0/model.appLike">model.appLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec b" href="/documentation/3.0.0/model.backLike">model.backLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec b" href="/documentation/3.0.0/model.biblLike">model.biblLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec b" href="/documentation/3.0.0/model.biblPart">model.biblPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.captionLike">model.captionLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.choicePart">model.choicePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.chordPart">model.chordPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.chordTableLike">model.chordTableLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.controleventLike">model.controleventLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.controleventLike.cmn">model.controleventLike.cmn</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec c" href="/documentation/3.0.0/model.controleventLike.harmony">model.controleventLike.harmony</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec d" href="/documentation/3.0.0/model.dateLike">model.dateLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec d" href="/documentation/3.0.0/model.descLike">model.descLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec d" href="/documentation/3.0.0/model.dimLike">model.dimLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec d" href="/documentation/3.0.0/model.divLike">model.divLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.editLike">model.editLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.editionLike">model.editionLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.editorialDeclPart">model.editorialDeclPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.editorialLike">model.editorialLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.encodingPart">model.encodingPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.endingLike">model.endingLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventLike">model.eventLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventLike.cmn">model.eventLike.cmn</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventLike.measureFilling">model.eventLike.measureFilling</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventLike.mensural">model.eventLike.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventLike.neumes">model.eventLike.neumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.eventPart">model.eventPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec e" href="/documentation/3.0.0/model.expressionLike">model.expressionLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.fLike">model.fLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.figDescLike">model.figDescLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.figbassLike">model.figbassLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.figureLike">model.figureLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.fingeringLike">model.fingeringLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.frontLike">model.frontLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec f" href="/documentation/3.0.0/model.frontPart">model.frontPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec g" href="/documentation/3.0.0/model.geogNamePart">model.geogNamePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec g" href="/documentation/3.0.0/model.graphicLike">model.graphicLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec g" href="/documentation/3.0.0/model.graphicprimitiveLike">model.graphicprimitiveLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec h" href="/documentation/3.0.0/model.harmLike">model.harmLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec h" href="/documentation/3.0.0/model.headLike">model.headLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec h" href="/documentation/3.0.0/model.headerPart">model.headerPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec i" href="/documentation/3.0.0/model.identifierLike">model.identifierLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec i" href="/documentation/3.0.0/model.imprintPart">model.imprintPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec i" href="/documentation/3.0.0/model.incipLike">model.incipLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec i" href="/documentation/3.0.0/model.instrDefLike">model.instrDefLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec i" href="/documentation/3.0.0/model.itemLike">model.itemLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec k" href="/documentation/3.0.0/model.keyAccidLike">model.keyAccidLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec k" href="/documentation/3.0.0/model.keySigLike">model.keySigLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.lLike">model.lLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.labelLike">model.labelLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerDefLike">model.layerDefLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerLike">model.layerLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerPart">model.layerPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerPart.cmn">model.layerPart.cmn</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerPart.mensural">model.layerPart.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerPart.mensuralAndNeumes">model.layerPart.mensuralAndNeumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.layerPart.neumes">model.layerPart.neumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.lbLike">model.lbLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.lgLike">model.lgLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.listLike">model.listLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.locrefLike">model.locrefLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec l" href="/documentation/3.0.0/model.lyricsLike">model.lyricsLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.manifestationLike">model.manifestationLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.mdivLike">model.mdivLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.measureLike">model.measureLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.measurePart">model.measurePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.measurementLike">model.measurementLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.meterSigLike">model.meterSigLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.midiLike">model.midiLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.milestoneLike.music">model.milestoneLike.music</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec m" href="/documentation/3.0.0/model.milestoneLike.text">model.milestoneLike.text</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.nameLike">model.nameLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.nameLike.agent">model.nameLike.agent</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.nameLike.geogName">model.nameLike.geogName</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.nameLike.label">model.nameLike.label</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.nameLike.place">model.nameLike.place</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.noteModifierLike">model.noteModifierLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec n" href="/documentation/3.0.0/model.numLike">model.numLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec o" href="/documentation/3.0.0/model.ornamentLike.cmn">model.ornamentLike.cmn</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec o" href="/documentation/3.0.0/model.ossiaLike">model.ossiaLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.pLike">model.pLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.paracontentPart">model.paracontentPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.partLike">model.partLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.partsLike">model.partsLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.pbLike">model.pbLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.persNamePart">model.persNamePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.physDescPart">model.physDescPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec p" href="/documentation/3.0.0/model.pubStmtPart">model.pubStmtPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec q" href="/documentation/3.0.0/model.quoteLike">model.quoteLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.rdgPart.critapp">model.rdgPart.critapp</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.rdgPart.text">model.rdgPart.text</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.relationLike">model.relationLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.rendLike">model.rendLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.repositoryLike">model.repositoryLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.resourceLike">model.resourceLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.respLike">model.respLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec r" href="/documentation/3.0.0/model.respLikePart">model.respLikePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scoreDefLike">model.scoreDefLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scoreLike">model.scoreLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scorePart">model.scorePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scorePart.mensural">model.scorePart.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scorePart.mensuralAndNeumes">model.scorePart.mensuralAndNeumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.scorePart.neumes">model.scorePart.neumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionLike">model.sectionLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionPart">model.sectionPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionPart.cmn">model.sectionPart.cmn</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionPart.mensural">model.sectionPart.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionPart.mensuralAndNeumes">model.sectionPart.mensuralAndNeumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sectionPart.neumes">model.sectionPart.neumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffDefLike">model.staffDefLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffDefPart">model.staffDefPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffDefPart.mensural">model.staffDefPart.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffGrpLike">model.staffGrpLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffLike">model.staffLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffPart">model.staffPart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffPart.mensural">model.staffPart.mensural</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffPart.mensuralAndNeumes">model.staffPart.mensuralAndNeumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.staffPart.neumes">model.staffPart.neumes</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.startLike.corpus">model.startLike.corpus</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.startLike.header">model.startLike.header</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.sylLike">model.sylLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.syllableLike">model.syllableLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.syllablePart">model.syllablePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec s" href="/documentation/3.0.0/model.symbolTableLike">model.symbolTableLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.tableLike">model.tableLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.textcomponentLike">model.textcomponentLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.textphraseLike">model.textphraseLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.textphraseLike.limited">model.textphraseLike.limited</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.titleLike">model.titleLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.titlePagePart">model.titlePagePart</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec t" href="/documentation/3.0.0/model.transcriptionLike">model.transcriptionLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec v" href="/documentation/3.0.0/model.verseLike">model.verseLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec w" href="/documentation/3.0.0/model.workIdent">model.workIdent</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                     <li>
                        <a class="link_odd_classSpec w" href="/documentation/3.0.0/model.workLike">model.workLike</a>
                     </li>
                     <li>
                        <br></br>
                     </li>
                  </ul>
               </div>
            </div>
         </div>
      </div>
   </div>
</article>